force-app/main/default/objects/TempPassenger__c/TempPassenger__c.object-meta.xml
<CustomObject>
    <label>TempPassenger</label>
    <nameField>
        <label>TempPassenger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TempPassengers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>