force-app/main/default/objects/TempPassenger__c/fields/boardPoint__c.field-meta.xml
<CustomField>
    <fullName>boardPoint__c</fullName>
    <description>not in used</description>
    <label>Board Point</label>
    <length>10</length>
    <type>Text</type>
</CustomField>