force-app/main/default/objects/TempPassenger__c/fields/bookingClass__c.field-meta.xml
<CustomField>
    <fullName>bookingClass__c</fullName>
    <description>not in used</description>
    <label>Booking Class</label>
    <length>5</length>
    <type>Text</type>
</CustomField>