force-app/main/default/objects/TempPassenger__c/fields/bookingSeat__c.field-meta.xml
<CustomField>
    <fullName>bookingSeat__c</fullName>
    <description>not in used</description>
    <label>Booking Seat</label>
    <length>10</length>
    <type>Text</type>
</CustomField>