force-app/main/default/objects/TempPassenger__c/fields/cabinCode__c.field-meta.xml
<CustomField>
    <fullName>cabinCode__c</fullName>
    <description>not in used</description>
    <label>Cabin Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>