force-app/main/default/objects/TempPassenger__c/fields/checkinSeat__c.field-meta.xml
<CustomField>
    <fullName>checkinSeat__c</fullName>
    <description>not in used</description>
    <label>Checkin Seat</label>
    <length>10</length>
    <type>Text</type>
</CustomField>