force-app/main/default/objects/TempPassenger__c/fields/dateOfBirth__c.field-meta.xml
<CustomField>
    <fullName>dateOfBirth__c</fullName>
    <description>not in used</description>
    <label>Date of birth</label>
    <length>15</length>
    <type>Text</type>
</CustomField>