force-app/main/default/objects/TempPassenger__c/fields/docDateExpiry__c.field-meta.xml
<CustomField>
    <fullName>docDateExpiry__c</fullName>
    <description>not in used</description>
    <label>Travel Doc Date Expiry</label>
    <length>15</length>
    <type>Text</type>
</CustomField>