force-app/main/default/objects/TempPassenger__c/fields/docIssuingCountry__c.field-meta.xml
<CustomField>
    <fullName>docIssuingCountry__c</fullName>
    <description>not in used</description>
    <label>Doc Issuing Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>