force-app/main/default/objects/TempPassenger__c/fields/docNumber__c.field-meta.xml
<CustomField>
    <fullName>docNumber__c</fullName>
    <description>not in used</description>
    <label>Travel document number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>