force-app/main/default/objects/TempPassenger__c/fields/docType__c.field-meta.xml
<CustomField>
    <fullName>docType__c</fullName>
    <description>not in used</description>
    <label>Document Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>