force-app/main/default/objects/TempPassenger__c/fields/email__c.field-meta.xml
<CustomField>
    <fullName>email__c</fullName>
    <description>not in used</description>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>