force-app/main/default/objects/TempPassenger__c/fields/enrollDate__c.field-meta.xml
<CustomField>
    <fullName>enrollDate__c</fullName>
    <description>not in used</description>
    <label>Enroll Date</label>
    <length>25</length>
    <type>Text</type>
</CustomField>