force-app/main/default/objects/TempPassenger__c/fields/enrollSource__c.field-meta.xml
<CustomField>
    <fullName>enrollSource__c</fullName>
    <description>not in used</description>
    <label>Enroll Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>