force-app/main/default/objects/TempPassenger__c/fields/errorMessage__c.field-meta.xml
<CustomField>
    <fullName>errorMessage__c</fullName>
    <description>not in used</description>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>