force-app/main/default/objects/TempPassenger__c/fields/firstName__c.field-meta.xml
<CustomField>
    <fullName>firstName__c</fullName>
    <description>not in used</description>
    <label>FirstName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>