force-app/main/default/objects/TempPassenger__c/fields/flightDate__c.field-meta.xml
<CustomField>
    <fullName>flightDate__c</fullName>
    <description>not in used</description>
    <label>Flight Date</label>
    <length>25</length>
    <type>Text</type>
</CustomField>