force-app/main/default/objects/TempPassenger__c/fields/flightNumber__c.field-meta.xml
<CustomField>
    <fullName>flightNumber__c</fullName>
    <description>not in used</description>
    <label>Flight Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>