force-app/main/default/objects/TempPassenger__c/fields/fqtCarrier__c.field-meta.xml
<CustomField>
    <fullName>fqtCarrier__c</fullName>
    <description>not in used</description>
    <label>fqtCarrier</label>
    <length>10</length>
    <type>Text</type>
</CustomField>