force-app/main/default/objects/TempPassenger__c/fields/fqtNumber__c.field-meta.xml
<CustomField>
    <fullName>fqtNumber__c</fullName>
    <description>not in used</description>
    <label>fqtNumber</label>
    <length>25</length>
    <type>Text</type>
</CustomField>