force-app/main/default/objects/TempPassenger__c/fields/fqtTierLevel__c.field-meta.xml
<CustomField>
    <fullName>fqtTierLevel__c</fullName>
    <description>not in used</description>
    <label>fqtTierLevel</label>
    <length>25</length>
    <type>Text</type>
</CustomField>