force-app/main/default/objects/TempPassenger__c/fields/gender__c.field-meta.xml
<CustomField>
    <fullName>gender__c</fullName>
    <description>not in used</description>
    <label>Gender</label>
    <length>10</length>
    <type>Text</type>
</CustomField>