force-app/main/default/objects/TempPassenger__c/fields/groupName__c.field-meta.xml
<CustomField>
    <fullName>groupName__c</fullName>
    <description>not in used</description>
    <label>Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>