force-app/main/default/objects/TempPassenger__c/fields/hasSSR__c.field-meta.xml
<CustomField>
    <fullName>hasSSR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>not in used</description>
    <label>Has SSR</label>
    <type>Checkbox</type>
</CustomField>