force-app/main/default/objects/TempPassenger__c/fields/homePhoneType__c.field-meta.xml
<CustomField>
    <fullName>homePhoneType__c</fullName>
    <description>not in used</description>
    <label>Home phone type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>