force-app/main/default/objects/TempPassenger__c/fields/isAssignedSeat__c.field-meta.xml
<CustomField>
    <fullName>isAssignedSeat__c</fullName>
    <defaultValue>false</defaultValue>
    <description>not in used</description>
    <label>Is Assigned Seat</label>
    <type>Checkbox</type>
</CustomField>