force-app/main/default/objects/TempPassenger__c/fields/isChild__c.field-meta.xml
<CustomField>
    <fullName>isChild__c</fullName>
    <defaultValue>false</defaultValue>
    <description>not in used</description>
    <label>Is Child</label>
    <type>Checkbox</type>
</CustomField>