force-app/main/default/objects/TempPassenger__c/fields/isInbound__c.field-meta.xml
<CustomField>
    <fullName>isInbound__c</fullName>
    <defaultValue>false</defaultValue>
    <description>not in used</description>
    <label>Is Inbound</label>
    <type>Checkbox</type>
</CustomField>