force-app/main/default/objects/TempPassenger__c/fields/isInfant__c.field-meta.xml
<CustomField>
    <fullName>isInfant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>not in used</description>
    <label>Is Infant</label>
    <type>Checkbox</type>
</CustomField>