force-app/main/default/objects/TempPassenger__c/fields/isOutbound__c.field-meta.xml
<CustomField>
    <fullName>isOutbound__c</fullName>
    <defaultValue>false</defaultValue>
    <description>not in used</description>
    <label>Is Outbound</label>
    <type>Checkbox</type>
</CustomField>