force-app/main/default/objects/TempPassenger__c/fields/isRetry__c.field-meta.xml
<CustomField>
    <fullName>isRetry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>not in used</description>
    <label>Retry</label>
    <type>Checkbox</type>
</CustomField>