force-app/main/default/objects/TempPassenger__c/fields/isStaffBooking__c.field-meta.xml
<CustomField>
    <fullName>isStaffBooking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>not in used</description>
    <label>Is StaffBooking</label>
    <type>Checkbox</type>
</CustomField>