force-app/main/default/objects/TempPassenger__c/fields/isStaffWaitlist__c.field-meta.xml
<CustomField>
    <fullName>isStaffWaitlist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>not in used</description>
    <label>Is StaffWaitlist</label>
    <type>Checkbox</type>
</CustomField>