force-app/main/default/objects/TempPassenger__c/fields/isTicket__c.field-meta.xml
<CustomField>
    <fullName>isTicket__c</fullName>
    <defaultValue>false</defaultValue>
    <description>not in used</description>
    <label>Is Ticket</label>
    <type>Checkbox</type>
</CustomField>