force-app/main/default/objects/TempPassenger__c/fields/language__c.field-meta.xml
<CustomField>
    <fullName>language__c</fullName>
    <description>not in used</description>
    <label>Language</label>
    <length>50</length>
    <type>Text</type>
</CustomField>