force-app/main/default/objects/TempPassenger__c/fields/lastName__c.field-meta.xml
<CustomField>
    <fullName>lastName__c</fullName>
    <description>not in used</description>
    <label>Lastname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>