force-app/main/default/objects/TempPassenger__c/fields/middleName__c.field-meta.xml
<CustomField>
    <fullName>middleName__c</fullName>
    <description>not in used</description>
    <label>Middle Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>