force-app/main/default/objects/TempPassenger__c/fields/mobile__c.field-meta.xml
<CustomField>
    <fullName>mobile__c</fullName>
    <description>not in used</description>
    <label>Mobile</label>
    <length>50</length>
    <type>Text</type>
</CustomField>