force-app/main/default/objects/TempPassenger__c/fields/nationality__c.field-meta.xml
<CustomField>
    <fullName>nationality__c</fullName>
    <description>not in used</description>
    <label>nationality</label>
    <length>50</length>
    <type>Text</type>
</CustomField>