force-app/main/default/objects/TempPassenger__c/fields/offPoint__c.field-meta.xml
<CustomField>
    <fullName>offPoint__c</fullName>
    <description>not in used</description>
    <label>Off Point</label>
    <length>10</length>
    <type>Text</type>
</CustomField>