force-app/main/default/objects/TempPassenger__c/fields/recordLocator__c.field-meta.xml
<CustomField>
    <fullName>recordLocator__c</fullName>
    <description>not in used</description>
    <label>Record Locator</label>
    <length>15</length>
    <type>Text</type>
</CustomField>