force-app/main/default/objects/TempPassenger__c/fields/religion__c.field-meta.xml
<CustomField>
    <fullName>religion__c</fullName>
    <description>not in used</description>
    <label>Religion</label>
    <length>50</length>
    <type>Text</type>
</CustomField>