force-app/main/default/objects/TempPassenger__c/fields/remainingMiles__c.field-meta.xml
<CustomField>
    <fullName>remainingMiles__c</fullName>
    <description>not in used</description>
    <label>Remaining Miles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>