force-app/main/default/objects/TempPassenger__c/fields/ROP_Business_Phone_2__c.field-meta.xml
<CustomField>
    <fullName>ROP_Business_Phone_2__c</fullName>
    <description>ROP business phone number 2</description>
    <label>ROP Business Phone 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>