force-app/main/default/objects/TempPassenger__c/fields/ROP_Business_Phone__c.field-meta.xml
<CustomField>
    <fullName>ROP_Business_Phone__c</fullName>
    <description>ROP business phone number</description>
    <label>ROP Business Phone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>