force-app/main/default/objects/TempPassenger__c/fields/ROP_Business_Phone_Area_Code__c.field-meta.xml
<CustomField>
    <fullName>ROP_Business_Phone_Area_Code__c</fullName>
    <description>ROP business phone area code</description>
    <label>ROP Business Phone Area Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>