force-app/main/default/objects/TempPassenger__c/fields/ROP_Business_Phone_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>ROP_Business_Phone_Country_Code__c</fullName>
    <description>ROP business phone country code</description>
    <label>ROP Business Phone Country Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>