force-app/main/default/objects/TempPassenger__c/fields/ROP_Business_Phone_Extension__c.field-meta.xml
<CustomField>
    <fullName>ROP_Business_Phone_Extension__c</fullName>
    <description>ROP business phone extension</description>
    <label>ROP Business Phone Extension</label>
    <length>255</length>
    <type>Text</type>
</CustomField>