force-app/main/default/objects/TempPassenger__c/fields/ROP_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>ROP_Date_of_Birth__c</fullName>
    <description>ROP date of birth</description>
    <label>ROP Date of Birth</label>
    <length>100</length>
    <type>Text</type>
</CustomField>