force-app/main/default/objects/TempPassenger__c/fields/ROP_Email__c.field-meta.xml
<CustomField>
    <fullName>ROP_Email__c</fullName>
    <description>ROP Email</description>
    <label>ROP Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>