force-app/main/default/objects/TempPassenger__c/fields/ROP_Fax_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>ROP_Fax_Country_Code__c</fullName>
    <description>not in used</description>
    <label>ROP Fax Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>