force-app/main/default/objects/TempPassenger__c/fields/ROP_Fax_Phone__c.field-meta.xml
<CustomField>
    <fullName>ROP_Fax_Phone__c</fullName>
    <description>ROP fax number</description>
    <label>ROP Fax Phone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>