force-app/main/default/objects/TempPassenger__c/fields/ROP_Fax_Phone_Area_Code__c.field-meta.xml
<CustomField>
    <fullName>ROP_Fax_Phone_Area_Code__c</fullName>
    <description>ROP fax area code</description>
    <label>ROP Fax Phone Area Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>