force-app/main/default/objects/TempPassenger__c/fields/ROP_Fax_Phone_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>ROP_Fax_Phone_Country_Code__c</fullName>
    <description>ROP fax country code</description>
    <label>ROP Fax Phone Country Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>