force-app/main/default/objects/TempPassenger__c/fields/ROP_Fax_Phone_Extension__c.field-meta.xml
<CustomField>
    <fullName>ROP_Fax_Phone_Extension__c</fullName>
    <description>ROP fax extension</description>
    <label>ROP Fax Phone Extension</label>
    <length>255</length>
    <type>Text</type>
</CustomField>