force-app/main/default/objects/TempPassenger__c/fields/ROP_First_Name__c.field-meta.xml
<CustomField>
    <fullName>ROP_First_Name__c</fullName>
    <description>ROP firstname</description>
    <label>ROP First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>