force-app/main/default/objects/TempPassenger__c/fields/ROP_Food_Preference__c.field-meta.xml
<CustomField>
    <fullName>ROP_Food_Preference__c</fullName>
    <description>ROP food preference (ex. SPML)</description>
    <label>ROP Food Preference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>