force-app/main/default/objects/TempPassenger__c/fields/ROP_Gender__c.field-meta.xml
<CustomField>
    <fullName>ROP_Gender__c</fullName>
    <description>ROP Gender</description>
    <label>ROP Gender</label>
    <length>100</length>
    <type>Text</type>
</CustomField>