force-app/main/default/objects/TempPassenger__c/fields/ROP_Home_Extension_2__c.field-meta.xml
<CustomField>
    <fullName>ROP_Home_Extension_2__c</fullName>
    <description>not in used</description>
    <label>ROP Home Extension 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>