force-app/main/default/objects/TempPassenger__c/fields/ROP_Home_Phone_2__c.field-meta.xml
<CustomField>
    <fullName>ROP_Home_Phone_2__c</fullName>
    <description>ROP home phone number 2</description>
    <label>ROP Home Phone 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>