force-app/main/default/objects/TempPassenger__c/fields/ROP_Home_Phone_2_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>ROP_Home_Phone_2_Country_Code__c</fullName>
    <description>ROP home phone country code 2</description>
    <label>ROP Home Phone 2 Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>