force-app/main/default/objects/TempPassenger__c/fields/ROP_Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>ROP_Home_Phone__c</fullName>
    <description>ROP home phone number</description>
    <label>ROP Home Phone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>