force-app/main/default/objects/TempPassenger__c/fields/ROP_Home_Phone_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>ROP_Home_Phone_Country_Code__c</fullName>
    <description>ROP home phone country code</description>
    <label>ROP Home Phone Country Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>