force-app/main/default/objects/TempPassenger__c/fields/ROP_Home_Phone_Extension__c.field-meta.xml
<CustomField>
    <fullName>ROP_Home_Phone_Extension__c</fullName>
    <description>ROP home phone extension</description>
    <label>ROP Home Phone Extension</label>
    <length>255</length>
    <type>Text</type>
</CustomField>