force-app/main/default/objects/TempPassenger__c/fields/ROP_Language__c.field-meta.xml
<CustomField>
    <fullName>ROP_Language__c</fullName>
    <description>ROP language preference</description>
    <label>ROP Language</label>
    <length>100</length>
    <type>Text</type>
</CustomField>