force-app/main/default/objects/TempPassenger__c/fields/ROP_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>ROP_Last_Name__c</fullName>
    <description>ROP lastname</description>
    <label>ROP Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>