force-app/main/default/objects/TempPassenger__c/fields/ROP_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>ROP_Mailing_Address__c</fullName>
    <description>ROP mailing address</description>
    <label>ROP Mailing Address</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>