force-app/main/default/objects/TempPassenger__c/fields/ROP_Mobile_Country_Code_2__c.field-meta.xml
<CustomField>
    <fullName>ROP_Mobile_Country_Code_2__c</fullName>
    <description>not in used</description>
    <label>ROP Mobile Country Code 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>