force-app/main/default/objects/TempPassenger__c/fields/ROP_Mobile_Phone_2__c.field-meta.xml
<CustomField>
    <fullName>ROP_Mobile_Phone_2__c</fullName>
    <description>ROP mobile phone number 2</description>
    <label>ROP Mobile Phone 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>