force-app/main/default/objects/TempPassenger__c/fields/ROP_Mobile_Phone_2_Area_Code__c.field-meta.xml
<CustomField>
    <fullName>ROP_Mobile_Phone_2_Area_Code__c</fullName>
    <description>ROP mobile phone area code 2</description>
    <label>ROP Mobile Phone 2 Area Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>