force-app/main/default/objects/TempPassenger__c/fields/ROP_Mobile_Phone_2_Extension__c.field-meta.xml
<CustomField>
    <fullName>ROP_Mobile_Phone_2_Extension__c</fullName>
    <description>ROP mobile phone extension 2</description>
    <label>ROP Mobile Phone 2 Extension</label>
    <length>255</length>
    <type>Text</type>
</CustomField>