force-app/main/default/objects/TempPassenger__c/fields/ROP_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>ROP_Mobile_Phone__c</fullName>
    <description>ROP mobile phone number</description>
    <label>ROP Mobile Phone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>