force-app/main/default/objects/TempPassenger__c/fields/ROP_Mobile_Phone_Area_Code__c.field-meta.xml
<CustomField>
    <fullName>ROP_Mobile_Phone_Area_Code__c</fullName>
    <description>ROP mobile phone area code</description>
    <label>ROP Mobile Phone Area Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>