force-app/main/default/objects/TempPassenger__c/fields/ROP_Mobile_Phone_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>ROP_Mobile_Phone_Country_Code__c</fullName>
    <description>ROP mobile phone country code</description>
    <label>ROP Mobile Phone Country Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>