force-app/main/default/objects/TempPassenger__c/fields/ROP_Number__c.field-meta.xml
<CustomField>
    <fullName>ROP_Number__c</fullName>
    <description>ROP membership number</description>
    <label>ROP Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>