force-app/main/default/objects/TempPassenger__c/fields/ROP_Seat_Preference__c.field-meta.xml
<CustomField>
    <fullName>ROP_Seat_Preference__c</fullName>
    <description>ROP seat prefer type (ex.NSSW = near window)</description>
    <label>ROP Seat Preference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>