force-app/main/default/objects/TempPassenger__c/fields/ROP_Status__c.field-meta.xml
<CustomField>
    <fullName>ROP_Status__c</fullName>
    <description>ROP status (ex. AC = active)</description>
    <label>ROP Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>