force-app/main/default/objects/TempPassenger__c/fields/ROP_Tier__c.field-meta.xml
<CustomField>
    <fullName>ROP_Tier__c</fullName>
    <description>ROP Tier</description>
    <label>ROP Tier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>