force-app/main/default/objects/TempPassenger__c/fields/ROP_Title__c.field-meta.xml
<CustomField>
    <fullName>ROP_Title__c</fullName>
    <description>ROP title / salutation</description>
    <label>ROP Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>