force-app/main/default/objects/TempPassenger__c/fields/ropAdrCityName__c.field-meta.xml
<CustomField>
    <fullName>ropAdrCityName__c</fullName>
    <description>not in used</description>
    <label>ROP Address City Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>