force-app/main/default/objects/TempPassenger__c/fields/ropAdrCompanyName1__c.field-meta.xml
<CustomField>
    <fullName>ropAdrCompanyName1__c</fullName>
    <description>not in used</description>
    <label>ROP Address Company Name 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>