force-app/main/default/objects/TempPassenger__c/fields/ropAdrCompanyName2__c.field-meta.xml
<CustomField>
    <fullName>ropAdrCompanyName2__c</fullName>
    <description>not in used</description>
    <label>ROP Address Company Name 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>