force-app/main/default/objects/TempPassenger__c/fields/ropAdrCountryCode__c.field-meta.xml
<CustomField>
    <fullName>ropAdrCountryCode__c</fullName>
    <description>not in used</description>
    <label>ROP Address Country Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>