force-app/main/default/objects/TempPassenger__c/fields/ropAdrLine1__c.field-meta.xml
<CustomField>
    <fullName>ropAdrLine1__c</fullName>
    <description>not in used</description>
    <label>ROP Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>