force-app/main/default/objects/TempPassenger__c/fields/ropAdrLine2__c.field-meta.xml
<CustomField>
    <fullName>ropAdrLine2__c</fullName>
    <description>not in used</description>
    <label>ROP Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>