force-app/main/default/objects/TempPassenger__c/fields/ropAdrLine3__c.field-meta.xml
<CustomField>
    <fullName>ropAdrLine3__c</fullName>
    <description>not in used</description>
    <label>ROP Address Line 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>