force-app/main/default/objects/TempPassenger__c/fields/ropAdrPostal__c.field-meta.xml
<CustomField>
    <fullName>ropAdrPostal__c</fullName>
    <description>not in used</description>
    <label>ROP Address Postal</label>
    <length>50</length>
    <type>Text</type>
</CustomField>