force-app/main/default/objects/TempPassenger__c/fields/ropAdrSeqNo__c.field-meta.xml
<CustomField>
    <fullName>ropAdrSeqNo__c</fullName>
    <description>not in used</description>
    <label>ROP address seq no</label>
    <length>25</length>
    <type>Text</type>
</CustomField>