force-app/main/default/objects/TempPassenger__c/fields/ropAdrType__c.field-meta.xml
<CustomField>
    <fullName>ropAdrType__c</fullName>
    <description>not in used</description>
    <label>ROP address type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>