force-app/main/default/objects/TempPassenger__c/fields/ropChildren__c.field-meta.xml
<CustomField>
    <fullName>ropChildren__c</fullName>
    <description>not in used</description>
    <label>ROP Children</label>
    <length>10</length>
    <type>Text</type>
</CustomField>