force-app/main/default/objects/TempPassenger__c/fields/ropCurrentMileage__c.field-meta.xml
<CustomField>
    <fullName>ropCurrentMileage__c</fullName>
    <description>not in used</description>
    <label>ROP Current Mileage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>