force-app/main/default/objects/TempPassenger__c/fields/ropEducation__c.field-meta.xml
<CustomField>
    <fullName>ropEducation__c</fullName>
    <description>not in used</description>
    <label>ROP Education</label>
    <length>15</length>
    <type>Text</type>
</CustomField>