force-app/main/default/objects/TempPassenger__c/fields/ropEmlSeqNo__c.field-meta.xml
<CustomField>
    <fullName>ropEmlSeqNo__c</fullName>
    <description>not in used</description>
    <label>ROP Eml Seq No</label>
    <length>25</length>
    <type>Text</type>
</CustomField>